--- a/404.html
+++ b/404.html
@@ -12,9 +12,9 @@
     <link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/404.html">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="apple-touch-icon" href="/images/favicon.svg">
 
     <!-- Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
