--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:title" content="오늘 메뉴 추천 | 오늘 뭐 먹지?">
     <meta property="og:description" content="오늘 뭐 먹지? 버튼 하나로 200가지 이상의 맛있는 메뉴를 랜덤 추천받으세요! 18개 언어 지원.">
     <meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=1200&h=630&fit=crop&q=80">
+    <meta property="og:image" content="https://ninanoo.com/images/og-image-keywords-alt.svg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="메뉴 추천 - 오늘 뭐 먹지?">
@@ -35,16 +35,16 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="오늘 메뉴 추천 | 오늘 뭐 먹지?">
     <meta name="twitter:description" content="오늘 뭐 먹지? 버튼 하나로 200가지 이상의 맛있는 메뉴를 랜덤 추천받으세요!">
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=1200&h=630&fit=crop&q=80">
+    <meta name="twitter:image" content="https://ninanoo.com/images/og-image-keywords-alt.svg">
     <meta name="twitter:image:alt" content="메뉴 추천 서비스">
 
     <!-- 네이버 SEO -->
     <meta name="naver-site-verification" content="naver-site-verification-code">
 
     <!-- 파비콘 -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="apple-touch-icon" href="/images/favicon.svg">
 
     <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
