--- a/pages/about.html
+++ b/pages/about.html
@@ -18,17 +18,18 @@
     <meta property="og:title" content="소개 - 메뉴 추천 서비스">
     <meta property="og:description" content="200가지 이상의 메뉴, 18개 언어, 70개국 이상 지원하는 무료 메뉴 추천 서비스를 소개합니다.">
     <meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/pages/about.html">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=1200&h=630&fit=crop&q=80">
+    <meta property="og:image" content="https://ninanoo.com/images/og-image-keywords-alt.svg">
     <meta property="og:locale" content="ko_KR">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="소개 - 메뉴 추천 서비스">
     <meta name="twitter:description" content="200가지 이상의 메뉴, 18개 언어, 70개국 이상 지원하는 무료 메뉴 추천 서비스를 소개합니다.">
+    <meta name="twitter:image" content="https://ninanoo.com/images/og-image-keywords-alt.svg">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
     <!-- Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
