--- a/pages/guide.html
+++ b/pages/guide.html
@@ -19,17 +19,18 @@
     <meta property="og:title" content="음식 가이드 - 메뉴 선택 완벽 가이드">
     <meta property="og:description" content="상황별, 계절별, 건강 목표별 메뉴 선택 가이드. 완벽한 메뉴를 찾아보세요.">
     <meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/pages/guide.html">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=1200&h=630&fit=crop&q=80">
+    <meta property="og:image" content="https://ninanoo.com/images/og-image-keywords-alt.svg">
     <meta property="og:locale" content="ko_KR">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="음식 가이드 - 메뉴 선택 완벽 가이드">
     <meta name="twitter:description" content="상황별, 계절별, 건강 목표별 메뉴 선택 가이드.">
+    <meta name="twitter:image" content="https://ninanoo.com/images/og-image-keywords-alt.svg">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
     <!-- Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
