--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -21,8 +21,8 @@
     <meta property="og:locale" content="ko_KR">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
     <!-- Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
